[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Gameover.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GameOver.gd" type="Script" id=2]
[ext_resource path="res://Sounds/deathmusic.ogg" type="AudioStream" id=3]

[node name="GameOver" type="Node2D"]
script = ExtResource( 2 )

[node name="Gameover" type="Sprite" parent="."]
position = Vector2( 427.296, 240.58 )
scale = Vector2( 1.34292, 1.13883 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="ScoreText" type="RichTextLabel" parent="."]
margin_left = 41.014
margin_top = 6.48569
margin_right = 747.014
margin_bottom = 108.486
text = "You served 0 customers and 0 crabs in your final moments

Your life was worth $0.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOut" type="ColorRect" parent="."]
visible = false
margin_left = -6.0
margin_top = -4.0
margin_right = 896.0
margin_bottom = 488.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 26.0
one_shot = true
autostart = true

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_FadeTimer_timeout"]
